feat : redis SortedSet + record 로직 통합